--- a/_includes/themes/twitter/about.html
+++ b/_includes/themes/twitter/about.html
@@ -8,9 +8,10 @@
         <p>
             <article class="violet-attent-det fn-clear">
                 <ul class="fn-right">
-                    <li><a href="https://github.com/chenyukang" target="_blank" class="v-github" rel="nofollow"><span>GitHub</span></a></li>
+                    <!--这是一段注释。注释不会在浏览器中显示。-->
+                    <!-- <li><a href="https://github.com/cbeigong" target="_blank" class="v-github" rel="nofollow"><span>GitHub</span></a></li>
                     <li><a href="http://www.weibo.com/moorekang" target="_blank" class="v-weibo" rel="nofollow"><span>Weibo</span></a></li>
-                    <li><a href="mailto:moorekang@gmail.com" target="_blank" class="v-rss" rel="nofollow"><span>Email</span></a></li>
+                    <li><a href="mailto:moorekang@gmail.com" target="_blank" class="v-rss" rel="nofollow"><span>Email</span></a></li>-->
                 </ul>
             </article>
         </p>
