--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -49,7 +49,7 @@
             <li><a href="/about.html">关于</a></li>
             <li><a href="/links.html">链接</a></li>
             <li><a href="/atom.xml">订阅</a></li>
-            <li><a href="http://chenyukang.github.io/">wiki</a></li>
+            <!-- <li><a href="http://chenyukang.github.io/">wiki</a></li> -->
           </ul>
 
           <span class="pull-right slogan"> {{ site.tagline }} </span>
