--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -65,7 +65,7 @@
       </div>
 
       <footer>
-        <p>&copy; <a href="mailto:{{ site.author.email }}">Yukang</a> 2012.
+        <p>&copy; <a href="mailto:{{ site.author.email }}">Lumin</a> 2015.
           Proudly powered by <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
@@ -76,11 +76,11 @@
     <!--*********************************************************-->
     <!--****** 看见这个时候，删掉下面的统计代码啊~ ******-->
     <!--*********************************************************-->
-    {% include JB/analytics %}
-    <div class="hide">
-      <script type="text/javascript">
-        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fba1315646a61cc7bd6f574a6b5221640' type='text/javascript'%3E%3C/script%3E"));
+    <!-- {% include JB/analytics %} -->
+     <div class="hide"> 
+       script type="text/javascript"
+           <!--   var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");-->
+           <!-- document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fba1315646a61cc7bd6f574a6b5221640' type='text/javascript'%3E%3C/script%3E"));-->
       </script>
     </div>
     <!--*********************************************************-->
